--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "echo \"Use Flask/Gunicorn to run backend\"",
+    "dev": "nodemon app.py"
+  },
   "dependencies": {
-    "react-router-dom": "^7.9.5"
+    "axios": "^1.13.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
